# open3d-generator-api

./: CONTRIBUTING.md  Dockerfile  LICENSE  MODEL_SUPPORT.md  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  schemas.py  storage.py
app/engines/: __init__.py  base.py  command.py  mock.py  registry.py
config/: engines.example.json
docs/: architecture.md  hunyuan3d.md  quality.md  triposr.md
scripts/: hunyuan3d_runner.py  triposr_runner.py
tests/: test_api.py  test_hunyuan_runner.py
web/: app.js  index.html  styles.css
