[project]
name = "open3d-generator-api"
version = "0.1.0"
description = "FastAPI service for single-image and multi-image 3D model generation with open-source model adapters."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
